# BarebonesExpenseManager

./: .gitignore  README.md  pyproject.toml  requirements.txt
bbem/: __init__.py  auth.py  db.py  entries.py  schema.sql
bbem/static/: style.css
bbem/templates/: base.html  main.html
bbem/templates/auth/: admin.html  import_data.html  login.html  upload.html
bbem/templates/entries/: create.html  index.html  update.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_entries.py  test_factory.py
