[project]
name = "bbem"
version = "1.0.0"
description = "A barebones expense manager."
dependencies = [
	"flask",
	"pytest",
	"coverage",
	"python-dotenv",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["bbem"]
